--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "lint": "eslint --ext .ts,vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@apollo/client": "^3.8.10",
     "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/apollo-composable": "^4.0.0",
+    "@vue/apollo-option": "^4.0.0",
+    "apollo-upload-client": "^18.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/apollo-upload-client": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vue/eslint-config-typescript": "^12.0.0",
