--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@vue/apollo-composable": "^4.0.0",
     "@vue/apollo-option": "^4.0.0",
     "apollo-upload-client": "^18.0.1",
+    "dotenv": "^16.4.1",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-apollo": "^3.1.2",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/node": "^20.11.10",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vue/eslint-config-typescript": "^12.0.0",
