--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.3.11",
     "vue-apollo": "^3.1.2",
     "vue-router": "^4.2.5",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
